# python-uml-tool

./: .gitignore  .gitmodules  README.md  pyproject.toml  run.py  test.html  test.xmi
docs/: analiza_zagadnienia.md  czesc_dla_programisty.md  dokumentacja_programistyczna.md  dokumentacja_uzytkownika.md  implementacja.md  implementacja_aplikacji_webowej.md  implementacja_biblioteki.md  instrukcja_uzytkownika.md  opis_i_analiza_zagadnienia.md  plan.md  podsumowanie.md  podsumowanie_i_dalszy_rozwoj.md  pomysly.md  porownanie_z_innymi_implementacjami.md  projekt_systemu.md  testy.md  thesis.tex  wprowadzenie.md  wstep.md  wymagania.md
examples/: library_system.xmi  stress_test.xmi
src/static/: App.js  Coordinate.js  DiagramState.js  EditorsUI.js  Exporter.js  GenerateService.js  Geometry.js  InteractionController.js  LinkService.js  SvgRenderer.js  TreeUI.js  XmiImporter.js  main.js  styles.css
src/templates/: canvas.html  index.html  sidebar.html  toolbar.html  tree.html
src/uml_tool/: Config.py  Main.py  main.py  utils.py
